  using one of three methods. Contributed by a user Filipe Campelo (fcampelo@ci.uc.pt).
  This is his first contribution. Added to author list in DESCRIPTION.

File: corr.rwl.seg.R
--------------------

- Bug fix: series names were not shown (numbers were shown instead)
- Bug fix: there were off-by-one errors in the length of the bars

File: DESCRIPTION
---------------
- Changed author and maintainer to Andy Bunn from Andrew G. Bunn to keep parity between 
  the names and the email address AGB uses to submit to CRAN. This was made at the
  request of Kurt Hornik at CRAN

* CHANGES IN dplR VERSION 1.5.5

File: NAMESPACE
---------------

- Exporting new functions

Various .R files:
-----------------

- Use 'nzchar(x)' instead of 'nchar(x) > 0'

File: rwi.stats.running.R
-------------------------

- Added prewhitening option to rwi.stats.running() and by extension rwi.stats().
  There are two new arguments prewhiten and n that are passed to normalize1()
  as in the xdating functions e.g., corr.rwl.seg(). Help file changed.

Files: corr.rwl.seg.R, seg.plot.R, rwl.stats.R, spag.plot.R
-----------------------------------------------------------

- Support for input of length 1


File: corr.rwl.seg.R
--------------------

- Fixed 'ylim' in plot()
- Fixed "no guides" case
- stops with a clear error message if 'rwl' has too few rows for the given
  'seg.length' and 'bin.floor' combination

File: fill.internal.NA.R
------------------------

- New function fill.internal.NA() fills NA values internal to a series.
  Written by Andy Bunn and Mikko Korpela. Help page added as well.

File: pointer.R
---------------

- New function pointer() calculates pointer years from a group of
  ring-width series.  Written by Pierre Mérian, adapted for dplR and
  improved by Andy Bunn and Mikko Korpela. Help page added as well.

File: rcs.R
-----------

- Graceful handling of empty input

File: read.compact.R
--------------------

- Pretty printing of summary output, no more ragged lines
